# mi300x-amd-rocm-validation

./: .gitignore  Dockerfile  README.md  pyproject.toml
configs/: amd_exporter_config.json
docs/: single-vf-rocprof-analysis.md
results/: peak_load_summary.md  rccl_bandwidth_sweep.csv
scripts/: gpu-health-check.sh  performance-stress-check.py  rccl_allreduce_test.py  rccl_bandwidth_test.py
